--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
   <h1>Trying Out</h1>
+  <p>Adding to Github</p>
+  <ul>
+    <li>One</li>
+    <li>Two</li>
+    <li>Three</li>
+  </ul>
 </body>
 
 </html>
